--- a/style.css
+++ b/style.css
@@ -39,6 +39,16 @@ div img{
     justify-content: center;
 }
 
+.flex-container-row{
+    display: flex;
+    max-width: 1200px;
+    margin: auto;
+    width: 100%;
+    min-width: 220px;
+    justify-content: center;
+    flex-direction: row;
+}
+
 header{
     background-color: var(--color-principal);
     height: 100px;
@@ -247,6 +257,51 @@ footer .left .endereço{
 .descricao-curta{
     width: 250px;
     margin-top: 20px;
+}
+
+#eventos{
+    background-color: #D9DBE9;
+    background: linear-gradient(90deg,#f0f0f0 60%, var(--color-principal) 40%);
+}
+
+#eventos .flex-container-row{
+    gap: 28px;
+    justify-content: space-between;
+}
+
+.box-evento{
+    background-color: #fff;
+    padding: 30px;
+    width: 100%;
+    height: 100%;
+    min-height: 288px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 28px;
+}
+
+
+.box-evento .titulo-evento{
+    font-size: 24px;
+    font-weight: 700;
+    color:var(--color-principal);
+}
+
+.box-evento .texto-evento{
+    font-size: 16px;
+}
+    
+.box-evento .evento-saiba-mais{
+    border: 2px solid var(--color-principal);
+    padding: 10px 0;
+    width: 100%;
+    background-color: unset;
+    font-weight: 700;
+    color: var(--color-principal);
+    text-decoration: unset;
 }
 
 /*Resposive rodape*/
