--- a/style.css
+++ b/style.css
@@ -478,4 +478,46 @@ footer .left .endereço{
         max-height: 300px;
         object-fit: cover;
     }
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
     }
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.swiper-button-next, .swiper-button-prev{
+    color: var(--color-principal);
+    position: relative;
+}
+.swiper-button-next{
+    top: -208px;
+    right: calc(-100% - 20px);
+}
+.swiper-button-prev{
+    top: -164px;
+    left: -47px;
+}
+
+@media (max-width: 820px) {
+    .swiper-button-next{
+        top: -188px;
+        right: calc(-100% - 8px);
+    }
+    .swiper-button-prev{
+        top: -146px;
+        left: -34px;
+    }
+}
